agenda view is stable

--- a/flytinerary-front-end/index.html
+++ b/flytinerary-front-end/index.html
@@ -17,11 +17,11 @@
 	  <div class="ui inverted vertical masthead center aligned segment">
 
 	    <div class="ui large text container">
-	      	<h1 class="ui inverted header" id="return-home">
+	      	<h1 class="ui inverted header" id="site-header">
 				Welcome to 🛫 Flytinerary 🛬
 	      	</h1>
-	      	<h2>Where are you headed?</h2>
-	      	<div class="ui search">
+	      	<h2 id="site-sub-header">Where are you headed?</h2>
+	      	<div class="ui search" id="search-container">
 			 	<div class="ui icon input">
 					<input id="trip-search" class="prompt" type="text" placeholder="Paris, France">
 					<i class="search icon"></i>
