new event form validation implemented

--- a/flytinerary-front-end/index.html
+++ b/flytinerary-front-end/index.html
@@ -3,8 +3,8 @@
 <head>
 	<script src="src/main.js"></script>
 	<script src="src/helpers.js"></script>
-	<script src="src/event_edit_page.js"></script>
-	<script src="src/trip_show_page.js"></script>
+	<script src="src/travellers.js"></script>
+	<script src="src/events.js"></script>
 	<!-- SEMANTIC -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 	<!-- MATERIALIZE -->
