new trip functionality is stable

--- a/flytinerary-front-end/index.html
+++ b/flytinerary-front-end/index.html
@@ -18,10 +18,10 @@
 	<div class="page">
 	  <div class="ui inverted vertical center aligned segment" id="header-bar">
 	    <div class="ui large text container" id="header-container">
-	      	<h1 class="ui inverted header" id="header-text">
-				
-	      	</h1>
-	      	<h2 id="sub-header-text"></h2>
+	    	<div id="header-content">
+		      	<h1 class="ui inverted header" id="header-text"></h1>
+		      	<h2 id="sub-header-text"></h2>
+	    	</div>
 	    </div>
 
 	  </div>
@@ -33,6 +33,11 @@
 	        </div>
 	      </div>
 	    </div>
+	  </div>
+	  <div class="ui inverted vertical footer center aligned segment form-page" id="page-footer">
+  		<div class="ui container">
+    		Flytinerary &copy;2020 — All Rights Reserved.
+  		</div>
 	  </div>
 </body>
 </html>
