form loading, prefill is a wip

--- a/flytinerary-front-end/index.html
+++ b/flytinerary-front-end/index.html
@@ -28,9 +28,11 @@
 
 	  <div class="ui vertical stripe segment">
 	    <div class="ui middle aligned stackable grid container">
-	      <div class="row">
-	        <div id="page-body" class="center aligned column">
-	        </div>
+	      <div class="row" id="form-container">
+	      	<div id="form-body" class="center aligned column"></div>
+	      </div>
+	      <div class="row" id="page-container">
+	        <div id="page-body" class="center aligned column"></div>
 	      </div>
 	    </div>
 	  </div>
