added readme and license

--- a/flytinerary-front-end/index.html
+++ b/flytinerary-front-end/index.html
@@ -38,7 +38,7 @@
 	  </div>
 	  <div class="ui inverted vertical footer center aligned segment form-page" id="page-footer">
   		<div class="ui container">
-    		Flytinerary &copy;2020 — All Rights Reserved.
+    		Flytinerary &copy;2020 — <a href="https://www.kylepcole.com/">Kyle P. Cole</a> — All Rights Reserved.
   		</div>
 	  </div>
 </body>
